<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddWork.AddWorkFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:outlineProvider="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/AddWork" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hintWorkTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/TypeWorkTitle"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:helperText="@string/Require"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintWorkTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_workTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/WorkTitle"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/hintSelectDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TypeWhenWork"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/btn_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hintSelectDay"
            app:selectionRequired="true"
            app:singleSelection="true">

            <!--            <com.google.android.material.button.MaterialButton-->
            <!--                android:id="@+id/btn_monthly"-->
            <!--                style="?attr/materialButtonOutlinedStyle"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="1"-->
            <!--                android:autoSizeTextType="uniform"-->
            <!--                android:padding="5dp"-->
            <!--                android:text="@string/monthly" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_weekly"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:padding="5dp"
                android:text="@string/weekly" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_everyday"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:padding="5dp"
                android:text="@string/everyday" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <!--        <RadioGroup-->
        <!--            android:id="@+id/monthlyGroup"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:checkedButton="@+id/radio_button_1"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup">-->

        <!--            &lt;!&ndash;            요일&ndash;&gt;-->
        <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content">-->

        <!--                <RadioButton-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                    app:layout_constraintStart_toStartOf="parent"-->
        <!--                    app:layout_constraintTop_toTopOf="parent" />-->

        <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

        <!--            &lt;!&ndash;            날짜&ndash;&gt;-->
        <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content">-->

        <!--                <RadioButton-->
        <!--                    android:id="@+id/radioButton"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                    app:layout_constraintStart_toStartOf="parent"-->
        <!--                    app:layout_constraintTop_toTopOf="parent" />-->

        <!--                <Spinner-->
        <!--                    android:id="@+id/sp_day"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:outlineProvider="none"-->
        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                    app:layout_constraintEnd_toEndOf="parent"-->
        <!--                    app:layout_constraintStart_toEndOf="@+id/radioButton"-->
        <!--                    app:layout_constraintTop_toTopOf="parent" />-->

        <!--                <TextView-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:text="일"-->
        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                    app:layout_constraintStart_toEndOf="@+id/sp_day"-->
        <!--                    app:layout_constraintTop_toTopOf="parent" />-->

        <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

        <!--            &lt;!&ndash;            몇째주&ndash;&gt;-->
        <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content">-->

        <!--                <RadioButton-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                    app:layout_constraintStart_toStartOf="parent"-->
        <!--                    app:layout_constraintTop_toTopOf="parent" />-->

        <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

        <!--        </RadioGroup>-->

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/daySelectionGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_group"
            app:selectionRequired="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sun"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:padding="5dp"
                android:text="@string/Sunday" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_mon"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:padding="5dp"
                android:text="@string/Monday" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_tue"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:padding="5dp"
                android:text="@string/Tuesday" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_wed"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:padding="5dp"
                android:text="@string/Wednesday" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_thu"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:padding="5dp"
                android:text="@string/Thursday" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_fri"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:padding="5dp"
                android:text="@string/Friday" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sat"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:padding="5dp"
                android:text="@string/Saturday" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <!--        <com.google.android.material.textview.MaterialTextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="하시는군요!"-->
        <!--            android:textColor="@color/black"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup2" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hintTypeMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/TypeMoney"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moneylayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:helperText="@string/Require"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintTypeMoney">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_money"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/HourlyMoney"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_"
        android:text="@string/workAddFinish"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>